syntax = "proto3";

package favorite;

option go_package = "github.com/JMURv/e-commerce/api/pb/favorite";

import "common/common.proto";

message EmptyResponse {}

service FavoriteService {
  rpc GetAllUserFavorites (GetAllUserFavoritesRequest) returns (ListFavoritesResponse) {}
  rpc GetFavoriteByID (FavoriteIDRequest) returns (common.Favorite) {}
  rpc CreateFavorite (CreateFavoriteRequest) returns (common.Favorite) {}
  rpc DeleteFavorite (DeleteFavoriteIDRequest) returns (EmptyResponse) {}
}

message GetAllUserFavoritesRequest {
  uint64 user_id = 1;
}

message ListFavoritesResponse {
  repeated common.Favorite favorites = 1;
}

message CreateFavoriteRequest {
  uint64 user_id = 1;
  uint64 item_id = 2;
}

message FavoriteIDRequest {
  uint64 favorite_id = 1;
}

message DeleteFavoriteIDRequest {
  uint64 user_id = 1;
  uint64 favorite_id = 2;
}
